# AI

./: .gitignore  .gitmodules  ComputerVision.md  README.md
DeepLearningFromScratch/: and_gate.ipynb  nand_gate.ipynb  xor_gate.ipynb
Document/: ComputerVision.md  Intelligent Robotic Study Notes.md  (+5 more)
learnopencv/src/: CMakeLists.txt
learnopencv/src/BlobDetector/: CMakeLists.txt
learnopencv/src/Colormap/: CMakeLists.txt  custom_colormap.cpp
learnopencv/src/Delaunay/: CMakeLists.txt
learnopencv/src/FPS/: CMakeLists.txt
learnopencv/src/FaceAverage/: CMakeLists.txt  faceAverage.cpp
learnopencv/src/FaceMorph/: CMakeLists.txt
learnopencv/src/FaceSwap/: CMakeLists.txt
learnopencv/src/FacialAttractiveness/: CMakeLists.txt
learnopencv/src/Holes/: CMakeLists.txt
learnopencv/src/Homography/: CMakeLists.txt  perspective-correction.cpp
learnopencv/src/ImageAlignment/: CMakeLists.txt  image_alignment.cpp  image_alignment_simple_example.cpp
learnopencv/src/NonPhotorealisticRendering/: CMakeLists.txt
learnopencv/src/RotationMatrixToEulerAngles/: CMakeLists.txt
learnopencv/src/SeamlessCloning/: CMakeLists.txt
learnopencv/src/Threshold/: CMakeLists.txt  threshold.cpp
learnopencv/src/WarpTriangle/: CMakeLists.txt
learnopencv/src/imread/: CMakeLists.txt  imread_examples.cpp
learnopencv/src/qt-test/: CMakeLists.txt
learnopencv/src/qt_open_surf/open_surf/: ipoint.cpp  ipoint.h  kmeans.cpp  kmeans.h  main.cpp  open_surf.pro  opensurf.cpp  opensurf.h  opensurf.ui  surflib.h
learnopencv/src/virtual-billboard/: CMakeLists.txt  virtual-billboard.cpp
(+176 files in other folders)
