cmake_minimum_required(VERSION 3.0)

if(WIN32)
    add_definitions(-DWIN32 -D__SSE2__)
else()
    message(FATAL_ERROR "Doesn't support any OS other than Windows for now.")
endif()
find_package( OpenCV REQUIRED )

add_subdirectory(BlobDetector)
add_subdirectory(Colormap)
add_subdirectory(Delaunay)
add_subdirectory(FaceAverage)
add_subdirectory(FaceMorph)
add_subdirectory(FaceSwap)
add_subdirectory(FacialAttractiveness)
add_subdirectory(FPS)
add_subdirectory(Holes)
add_subdirectory(Homography)
add_subdirectory(ImageAlignment)
add_subdirectory(imread)
add_subdirectory(NonPhotorealisticRendering)
add_subdirectory(qt-test)
add_subdirectory(RotationMatrixToEulerAngles)
add_subdirectory(SeamlessCloning)
add_subdirectory(Threshold)
add_subdirectory(WarpTriangle)
add_subdirectory(virtual-billboard)
